src/MiniJava/Tests/DriverTests/extends_nonexisting.err
extends_nonexisting.mj:1:0-17: error: Class 'A' has a nonexisting superclass 'B'
    class A extends B {} // should complain
    ^^^^^^^^^^^^^^^^^

1 errors in total.
