src/MiniJava/Tests/DriverTests/extends_nonexisting.mj
class A extends B {} // should complain
